--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.12",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
